[package]
name = "gsm"
version = "0.1.0"
edition = "2024"
description = "a TUI for managing git stashes"
authors = ["Shreyash Srivastva"]
license = "MIT"
repository = "https://github.com/shreyazh/gsm"
readme = "README.md"

[[bin]]
name = "gsm"
path = "src/main.rs"

[dependencies]

ratatui = "0.29"

crossterm = "0.28"

anyhow = "1.0"

chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
strip = true
lto = true